<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Encrypt Decrypt</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_encrypt">Encrypt</string>
    <string name="title_activity_decrypt">Decrypt</string>
    <string name="title_activity_about_me">About Me</string>
    <string name="plaintext">Plaintext :</string>
    <string name="key">Key :</string>
    <string name="ciphertext">Ciphertext :</string>
    <string name="bMenu">Menu</string>
    <string name="bEncrypt">Encrypt</string>
    <string name="bDecrypt">Decrypt</string>
    <string name="name">Name</string>
    <string name="fisrt_name">: Sulistiyanto</string>
    <string name="nickname">: tiyanr</string>
    <string name="nick">Nick Name</string>
    <string name="emailo">: tbraxco93@gmail.com</string>
    <string name="email">Email</string>
    <string name="facebook">: Tiyan Altair Cyrus</string>
    <string name="fb">Facebook</string>
    <color name="orange">#FFA500</color>
    <string name="image">about_me</string>
    <string name="citya">City</string>
    <string name="city">: Tuban</string>
    <string name="Province">: East Java, Indonesia</string>
    <string name="prov">Province</string>
    <string name="dev">Developer</string>

</resources>
