<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Encrypt" >

    <TextView
        android:id="@+id/textPlainText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/plaintext"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editPlainText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textPlainText"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textKey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editPlainText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="2dp"
        android:text="@string/key"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editKey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textKey"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textChiperText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editKey"
        android:layout_below="@+id/editKey"
        android:layout_marginTop="10dp"
        android:text="@string/ciphertext"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editChiperText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textChiperText"
        android:layout_below="@+id/textChiperText"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/buttonMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonEncrypt"
        android:layout_alignBottom="@+id/buttonEncrypt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="155dp"
        android:text="@string/bMenu" />

    <Button
        android:id="@+id/buttonEncrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editChiperText"
        android:layout_marginLeft="155dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="10dp"
        android:text="@string/bEncrypt" />

</RelativeLayout>
